# fd-eda

./: .gitignore  docker-compose.development.yml  docker-compose.yaml  docker-compose.yml  pyproject.toml
.devcontainer/: devcontainer.json  docker-compose.yml
api/: client.http  client.http.example  consumer.http
consumer/: Dockerfile  README.md  config.py  consumer.http  getdb.py  log.py  main.py  pyproject.toml  sql_app.db
consumer/.devcontainer/: devcontainer.json  docker-compose.yml
consumer/.docker/: start-app.sh
consumer/__seedwork__/: getdb.py
consumer/balance/: consumer.py  crud.py  entity.py  model.py  routes.py  schemas.py
goapp/: Dockerfile  go.mod  go.sum
goapp/api/: client.http
goapp/cmd/walletcore/: main.go
goapp/internal/database/: populate.go
goapp/internal/event/handler/: balance_updated_kafka.go  transaction_created_kafka.go
goapp/internal/web/webserver/: webserver.go
src/: balance_consumer.py  main.py
src/__seedwork__/: getdb.py
src/balance/: database.py  repository.py  routes.py
