
[project]
name = "app"
version = "0.1.0"
description = ""
authors = [
    {name = "Gustavo Figueiredo", email = "gustavo.figueiredo@fast2mine.com"},
]
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn>=0.22.0",
    "pydantic>=2.0.2",
    "aiokafka>=0.8.1",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
