
[project]
name = "consumer"
version = "0.1.0"
description = ""
authors = [
    { name = "Gustavo Figueiredo", email = "gustavohmfigueiredo@gmail.com" },
]
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn>=0.22.0",
    "pydantic>=2.0.2",
    "aiokafka>=0.8.1",
    "pydantic-settings>=2.0.1",
    "sqlalchemy>=2.0.18",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.scripts]
start = "python -m uvicorn --host 0.0.0.0 --port 8000 --log-level debug main:app"
dev = "python -m uvicorn --reload --host 0.0.0.0 --port 8000 --log-level debug main:app"

